04-deploying/.manifests/service.admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin
  name: admin
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: admin
  type: NodePort
